remove aspect-ratio to avoid cropping issues

--- a/packages/ssr-web/app/components/card-space/user-page/index.css
+++ b/packages/ssr-web/app/components/card-space/user-page/index.css
@@ -42,6 +42,7 @@
     min-height: 100vh;
     min-width: 100%;
     border-radius: 0;
+    aspect-ratio: unset;
   }
 }
 
